Get order by id
